samples/SEMANTIC_ERROR/division_by_zero2.php
<?php
declare(strict_types=1);
$b = 0;
$b = 1;
$a = 1 / $b;
$hmm = 0.2;
$c = 0.0;
//ERROR[8]
$d = 1 / $c;